m1 completed